# greycloak

./: .gitignore  README.md  pyproject.toml
.claude/: WORKLOG.md
docs/: LANDSCAPE.md  README.md  ROADMAP.md  api.md  architecture.md  multi-agent.md  optimization.md  risks.md  usage.md
docs/superpowers/plans/: 2026-07-13-m1-validated-judge.md  2026-07-13-m1-validated-judge.md.tasks.json  2026-07-13-m2a-optimize-backbone.md  2026-07-13-m2a-optimize-backbone.md.tasks.json
docs/superpowers/specs/: 2026-07-13-greycloak-harden-extend-design.md
examples/: campaign.yaml  multi_agent.py  optimize.py  quickstart.py  vulnerable_agent.py
src/greycloak/: __init__.py  agent.py  baselines.py  cli.py  config.py  engine.py  eval_judge.py  models.py  modules.py  optimize.py  policy.py  provenance.py  report.py  risks.py  service.py  signatures.py  store.py  strategies.py
src/greycloak/data/: judge_labels.yaml
src/greycloak/frontend/: index.html
tests/: conftest.py  test_agent.py  test_attacker_store.py  test_baselines.py  test_cli_eval_judge.py  test_config.py  test_dual_judge.py  test_engine.py  test_eval_judge.py  test_eval_judge_bias.py  test_judge_aggregate.py  test_judge_ensemble.py  test_models.py  test_modules.py  test_multiagent.py  test_optimize.py  test_optimize_driver.py  test_optimize_real.py  test_policy.py  test_provenance.py  test_provenance_wiring.py  test_report.py  test_risks_strategies.py  test_run_context.py  test_service.py  test_store.py
